--- a/bookify-frontend/package.json
+++ b/bookify-frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
